--- a/resources/designer/settingsDialog.ui
+++ b/resources/designer/settingsDialog.ui
@@ -17,7 +17,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -54,6 +54,11 @@
          <row>
           <property name="text">
            <string>DisassemblerShowQuickTooltip</string>
+          </property>
+         </row>
+         <row>
+          <property name="text">
+           <string>Add commands to History</string>
           </property>
          </row>
          <column>
@@ -108,6 +113,16 @@
            <enum>Checked</enum>
           </property>
          </item>
+         <item row="3" column="0">
+          <property name="text">
+           <string>Add commands to history</string>
+          </property>
+         </item>
+         <item row="3" column="1">
+          <property name="checkState">
+           <enum>Checked</enum>
+          </property>
+         </item>
         </widget>
        </item>
       </layout>
@@ -116,6 +131,22 @@
       <attribute name="title">
        <string>Commands</string>
       </attribute>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
+        <widget class="QPushButton" name="cmdLoadDefaults">
+         <property name="text">
+          <string>Load Default Config</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QPushButton" name="cmdTest">
+         <property name="text">
+          <string>Test Button</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
    </item>
