--- a/resources/designer/settingsDialog.ui
+++ b/resources/designer/settingsDialog.ui
@@ -66,6 +66,11 @@
            <string>MemoryViewer show selected address range statusbar message</string>
           </property>
          </row>
+         <row>
+          <property name="text">
+           <string>VisualizeCurrentBP</string>
+          </property>
+         </row>
          <column>
           <property name="text">
            <string>Setting</string>
@@ -78,7 +83,7 @@
          </column>
          <item row="0" column="0">
           <property name="text">
-           <string>Confirm restar target</string>
+           <string>Confirm restart target</string>
           </property>
          </item>
          <item row="0" column="1">
@@ -140,6 +145,16 @@
           <property name="text">
            <string/>
           </property>
+          <property name="checkState">
+           <enum>Checked</enum>
+          </property>
+         </item>
+         <item row="5" column="0">
+          <property name="text">
+           <string>Visuzalize current breakpoint</string>
+          </property>
+         </item>
+         <item row="5" column="1">
           <property name="checkState">
            <enum>Checked</enum>
           </property>
